--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "test": "jest --coverage=false",
+    "test:watch": "jest --coverage=false --watch",
     "typings": "npx tsc . --emitDeclarationOnly --outDir dist",
     "build:webpack": "rm -rf dist && webpack --mode production && tsc --emitDeclarationOnly --outDir dist/typings",
     "build:webpack:watch:dev": "rm -rf esm dist && tsc --emitDeclarationOnly --outDir dist/typings && webpack --mode development --watch",
