--- a/tsconfig.json
+++ b/tsconfig.json
@@ -58,7 +58,8 @@
     // "typeRoots": ["node_modules/@types", "@types"],
       "types": [
         "node",
-        "@types/jest"
+        "@types/jest",
+        "jest-extended"
       ] /* Type declaration files to be included in compilation. */,
       // "allowSyntheticDefaultImports": true,        /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
       "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
@@ -80,6 +81,6 @@
       "skipLibCheck": true /* Skip type checking of declaration files. */,
       "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
     },
-    "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.json", "@types"],
+    "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.json"],
     "exclude": ["src/**/*.test.ts"]
   }
