--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,7 +55,7 @@
     //     "*": ["node_modules/*"]
     //   } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
       // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
-    // "typeRoots": ["node_modules/@types", "@types"],
+    "typeRoots": ["@types", "jest-extended"],
       "types": [
         "node",
         "@types/jest",
@@ -81,6 +81,6 @@
       "skipLibCheck": true /* Skip type checking of declaration files. */,
       "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
     },
-    "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.json"],
+    "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.json", "@types"],
     "exclude": ["src/**/*.test.ts"]
   }
