--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@swc/core": "^1.3.4",
     "@types/jest": "^29.1.1",
+    "jest-environment-jsdom": "^29.2.2",
     "jest-extended": "^3.1.0",
     "prettier": "2.7.1",
     "swc-loader": "^0.2.3",
