--- a/package.json
+++ b/package.json
@@ -39,8 +39,12 @@
   "homepage": "https://github.com/Recursive-House/analytics#readme",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
     "redux": "^4.2.0",
-    "typescript": "^4.8.4"
+    "stream": "^0.0.2",
+    "typescript": "^4.8.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@swc/core": "^1.3.4",
