--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "devDependencies": {
     "@swc/core": "^1.3.4",
     "@types/jest": "^29.1.1",
+    "fast-check": "^3.3.0",
     "jest-environment-jsdom": "^29.2.2",
     "jest-extended": "^3.1.0",
     "prettier": "2.7.1",
